// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Primitive tests should match snapshot 1`] = `
<DocumentFragment>
  <div
    class="emotion-0"
  >
    primitive content
  </div>
</DocumentFragment>
`;

exports[`Primitive tests should match snapshot using element 1`] = `
<DocumentFragment>
  <a
    class="emotion-0"
    data-testid="primitive"
    href="https://github.com/"
  >
    link content
  </a>
</DocumentFragment>
`;
